# tree2fs-rs

./: Cargo.toml  LICENSE  README.md  install.sh  test.sh
.github/workflows/: release.yml
examples/: api_usage.rs
src/: builder.rs  lib.rs  main.rs  parser.rs
src/models/: file_item.rs  mod.rs  node.rs
tests/: integration_test.rs
